# matmult-performance

./: CMakeLists.txt  README.md  mmult.cpp  ocl.cpp
